2007-05-11  Abel Cheung  <abelcheung@gmail.com>

	* showcode.php, wp-scorerender.php: Replace popup with form
	opened in new window in order to use $_POST instead, as IE
	chops $_GET values at 2000 chars.

2007-05-09  Abel Cheung  <abelcheung@gmail.com>

	* showcode.php, wp-scorerender.php: Fix for popup window showing
	plus sign as space.

2007-05-08  Abel Cheung  <abelcheung@gmail.com>

	* showcode.php, showcode.css: Use CSS.
	* class.*.inc.php: Rename to lower case class name, for easier string
	concatenation.
	* wp-scorerender.php:
	- Eliminate the need of some define'd constant and hardcoded handling
	  of various music syntax
	- scorerender_get_fragment_count(): Impl'd.
	- scorerender_activity_box(): Add more stat to dashboard.

2007-05-07  Abel Cheung  <abelcheung@gmail.com>

	* showcode.css: New file.
	* showcode.php: Add style sheet.

2007-05-07  Abel Cheung  <abelcheung@gmail.com>

	* showcode.php:
	New file for showing fragment code in popup window.

	* wp-scorerender.php:
	Add hook for showing stat in WP dashboard.

2007-05-06  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	scorerender_get_num_of_images(), scorerender_remove_cache() - Provide
	stat of number of cached images, and add button to remove images.

2007-04-14  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Add PHP 4 compatibility function for array_intersect_key().

2007-04-13  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Supports restricting number of fragment per comment.

2007-04-11  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, class.scorerender.inc.php:
	Supports restricting maximum length per fragment.

2007-04-11  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	Drop support for configurable markup, people probably don't need that.

=== ScoreRender 0.1.2 ===

2007-03-30  Abel Cheung  <abelcheung@gmail.com>

	* class.*.php: Add +repage option to imagemagick.
	* wp-scorerender.php: Minor string change.
